[package]
name = "async-slack-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
